[gd_scene load_steps=3 format=3 uid="uid://cms74bkmitvhh"]

[ext_resource type="PackedScene" uid="uid://hsi178uy6rig" path="res://addons/nt_goap/nt_goap_environment_view.tscn" id="1_8mwlv"]
[ext_resource type="Script" path="res://addons/nt_goap/nt_goap_action_add.gd" id="1_vfdwq"]

[node name="NT_GOAP_Action_Add" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vfdwq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "添加行动"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionNameInput" type="LineEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "行为名称"
alignment = 1

[node name="PreconditionsView" parent="PanelContainer/VBoxContainer" instance=ExtResource("1_8mwlv")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10"
alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsView" parent="PanelContainer/VBoxContainer" instance=ExtResource("1_8mwlv")]
unique_name_in_owner = true
layout_mode = 2

[node name="Add" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "添加"

[connection signal="add_environment" from="PanelContainer/VBoxContainer/PreconditionsView" to="." method="_on_preconditions_view_add_environment"]
[connection signal="remove_environment" from="PanelContainer/VBoxContainer/PreconditionsView" to="." method="_on_preconditions_view_remove_environment"]
[connection signal="add_environment" from="PanelContainer/VBoxContainer/EffectsView" to="." method="_on_effects_view_add_environment"]
[connection signal="remove_environment" from="PanelContainer/VBoxContainer/EffectsView" to="." method="_on_effects_view_remove_environment"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Add" to="." method="_on_add_pressed"]
